--- a/VUIComponents/Classes/Components/Card/Subclass/ExpandSignpostWithAvatarCardView/ExpandSignpostCellRTL.xib
+++ b/VUIComponents/Classes/Components/Card/Subclass/ExpandSignpostWithAvatarCardView/ExpandSignpostCellRTL.xib
@@ -1,70 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2659" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
-    <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
-        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
-    </dependencies>
-    <customFonts key="customFonts">
-        <array key="GE_SS_2_Medium.otf">
-            <string>GESSTwoMedium-Medium</string>
-        </array>
-        <array key="GE_SS_Bold.otf">
-            <string>GESSTextBold-Bold</string>
-        </array>
-    </customFonts>
-    <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
-        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExpandSignpostCellRTL" id="KGk-i7-Jjw" customClass="ExpandSignpostCellRTL">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                <autoresizingMask key="autoresizingMask"/>
-                <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GAe-hR-BmR">
-                        <rect key="frame" x="301" y="22" width="0.0" height="0.0"/>
-                        <fontDescription key="fontDescription" name="GESSTwoMedium-Medium" family="GE SS Two" pointSize="16"/>
-                        <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CardArrowRTL" translatesAutoresizingMaskIntoConstraints="NO" id="0Vz-nF-kep">
-                        <rect key="frame" x="8" y="13" width="17" height="17"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="17" id="jcT-o5-sW1"/>
-                            <constraint firstAttribute="height" constant="17" id="xbW-E5-dKb"/>
-                        </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jfH-gj-VJT">
-                        <rect key="frame" x="35" y="22" width="0.0" height="0.0"/>
-                        <fontDescription key="fontDescription" name="GESSTextBold-Bold" family="GE SS" pointSize="16"/>
-                        <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                </subviews>
-                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                <constraints>
-                    <constraint firstItem="jfH-gj-VJT" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Bc0-xr-kSn"/>
-                    <constraint firstAttribute="rightMargin" secondItem="GAe-hR-BmR" secondAttribute="right" constant="11" id="ST5-mF-SDI"/>
-                    <constraint firstItem="0Vz-nF-kep" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="qNx-II-fAt"/>
-                    <constraint firstItem="GAe-hR-BmR" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="rGh-hi-5bt"/>
-                    <constraint firstItem="jfH-gj-VJT" firstAttribute="left" secondItem="0Vz-nF-kep" secondAttribute="right" constant="10" id="ruj-fx-cZd"/>
-                    <constraint firstAttribute="leftMargin" secondItem="0Vz-nF-kep" secondAttribute="left" id="ulK-Qt-rTH"/>
-                </constraints>
-            </tableViewCellContentView>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-            <connections>
-                <outlet property="imgView" destination="0Vz-nF-kep" id="yRF-c7-oJH"/>
-                <outlet property="leftLabel" destination="jfH-gj-VJT" id="5QE-vG-eae"/>
-                <outlet property="rightLabel" destination="GAe-hR-BmR" id="QhX-d0-69h"/>
-            </connections>
-        </tableViewCell>
-    </objects>
-    <resources>
-        <image name="CardArrowRTL" width="64" height="64"/>
-    </resources>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<device id="retina4_7" orientation="portrait">
+<adaptation id="fullscreen"/>
+</device>
+<dependencies>
+<deployment identifier="iOS"/>
+<plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+<capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
+</dependencies>
+<customFonts key="customFonts">
+<array key="GE SS Two Medium.otf">
+<string>GESSTwoMedium-Medium</string>
+</array>
+<array key="GE_SS_Bold.otf">
+<string>GESSTextBold-Bold</string>
+</array>
+</customFonts>
+<objects>
+<placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+<placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
+<tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExpandSignpostCellRTL" id="KGk-i7-Jjw" customClass="ExpandSignpostCellRTL">
+<rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+<autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+<tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+<rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+<autoresizingMask key="autoresizingMask"/>
+<subviews>
+<imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="y72-0L-MRc" userLabel="Right ImgView">
+<rect key="frame" x="315" y="6" width="0.0" height="31"/>
+<constraints>
+<constraint firstAttribute="width" id="bY9-ag-Kdy"/>
+</constraints>
+</imageView>
+<label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GAe-hR-BmR">
+<rect key="frame" x="315" y="22" width="0.0" height="0.0"/>
+<fontDescription key="fontDescription" name="GESSTwoMedium-Medium" family="GE SS Two" pointSize="16"/>
+<color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+<nil key="highlightedColor"/>
+</label>
+<imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CardArrowRTL" translatesAutoresizingMaskIntoConstraints="NO" id="0Vz-nF-kep">
+<rect key="frame" x="16" y="13.5" width="17" height="17"/>
+<constraints>
+<constraint firstAttribute="width" constant="17" id="jcT-o5-sW1"/>
+<constraint firstAttribute="height" constant="17" id="xbW-E5-dKb"/>
+</constraints>
+</imageView>
+<label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jfH-gj-VJT">
+<rect key="frame" x="43" y="22" width="0.0" height="0.0"/>
+<fontDescription key="fontDescription" name="GESSTextBold-Bold" family="GE SS" pointSize="16"/>
+<color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+<nil key="highlightedColor"/>
+</label>
+</subviews>
+<color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+<constraints>
+<constraint firstItem="jfH-gj-VJT" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Bc0-xr-kSn"/>
+<constraint firstAttribute="right" secondItem="y72-0L-MRc" secondAttribute="right" constant="5" id="cST-CH-iAa"/>
+<constraint firstAttribute="bottom" secondItem="y72-0L-MRc" secondAttribute="bottom" constant="6.5" id="dlr-EE-am0"/>
+<constraint firstItem="y72-0L-MRc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="6" id="fqG-RS-O5O"/>
+<constraint firstItem="GAe-hR-BmR" firstAttribute="right" secondItem="y72-0L-MRc" secondAttribute="right" id="mYb-qT-6ja"/>
+<constraint firstItem="0Vz-nF-kep" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="qNx-II-fAt"/>
+<constraint firstItem="GAe-hR-BmR" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="rGh-hi-5bt"/>
+<constraint firstItem="jfH-gj-VJT" firstAttribute="left" secondItem="0Vz-nF-kep" secondAttribute="right" constant="10" id="ruj-fx-cZd"/>
+<constraint firstAttribute="leftMargin" secondItem="0Vz-nF-kep" secondAttribute="left" id="ulK-Qt-rTH"/>
+</constraints>
+</tableViewCellContentView>
+<color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+<connections>
+<outlet property="imgView" destination="0Vz-nF-kep" id="yRF-c7-oJH"/>
+<outlet property="leftLabel" destination="jfH-gj-VJT" id="5QE-vG-eae"/>
+<outlet property="rightImgView" destination="y72-0L-MRc" id="Dpz-vU-3v6"/>
+<outlet property="rightLabel" destination="GAe-hR-BmR" id="QhX-d0-69h"/>
+<outlet property="widthRightImg" destination="bY9-ag-Kdy" id="T5n-2u-sRG"/>
+</connections>
+<point key="canvasLocation" x="52.799999999999997" y="48.575712143928037"/>
+</tableViewCell>
+</objects>
+<resources>
+<image name="CardArrowRTL" width="64" height="64"/>
+</resources>
 </document>
