--- a/VUIComponents/Classes/Components/UI/Card/SignpostsWithAvatarCardView.xib
+++ b/VUIComponents/Classes/Components/UI/Card/SignpostsWithAvatarCardView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -14,6 +14,7 @@
                 <outlet property="arrowImgView" destination="Yqk-DM-7TO" id="Rlb-xD-Uof"/>
                 <outlet property="avatarImageWidthConstraint" destination="Jbm-Ik-YlS" id="jgL-U4-63w"/>
                 <outlet property="avatarImgView" destination="6ui-Mh-dab" id="7NA-hE-swX"/>
+                <outlet property="containerView" destination="xWt-Rz-HEn" id="Ebq-Ar-bsL"/>
                 <outlet property="contentView" destination="Q79-Wc-dIi" id="BKx-cn-0it"/>
                 <outlet property="expandedView" destination="oyl-yI-tyq" id="Q5t-AU-ZV1"/>
                 <outlet property="expandedViewHeightConstraint" destination="hys-QR-IvM" id="ldv-0K-YtW"/>
