--- a/VUIComponents/Classes/Components/UI/Card/SignpostsWithAvatarCardViewRTL.xib
+++ b/VUIComponents/Classes/Components/UI/Card/SignpostsWithAvatarCardViewRTL.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -14,6 +14,7 @@
                 <outlet property="arrowImgView" destination="Ob3-Ug-6El" id="jWj-uz-Yw4"/>
                 <outlet property="avatarImageWidthConstraint" destination="evH-Dj-ET8" id="Mdl-Pl-Ug1"/>
                 <outlet property="avatarImgView" destination="W4v-NH-Tyi" id="n34-Gs-bIa"/>
+                <outlet property="containerView" destination="aDO-Jm-g9q" id="Lsx-Qa-gEY"/>
                 <outlet property="contentView" destination="JHE-EH-dBF" id="VFu-L8-urP"/>
                 <outlet property="expandedView" destination="kB8-nD-W5R" id="5cA-uW-696"/>
                 <outlet property="expandedViewHeightConstraint" destination="k3N-A0-i07" id="RfL-sj-Ohe"/>
@@ -171,6 +172,6 @@
         </view>
     </objects>
     <resources>
-        <image name="CardArrowRTL" width="64" height="64"/>
+        <image name="CardArrowRTL" width="102.40000152587891" height="102.40000152587891"/>
     </resources>
 </document>
